syntax = "proto3";

package extensions.networking.mesh.gloo.solo.io;

option go_package = "github.com/solo-io/gloo-mesh/pkg/api/networking.mesh.gloo.solo.io/extensions/v1beta1";

import "github.com/solo-io/gloo-mesh/api/discovery/v1/mesh.proto";
import "github.com/solo-io/gloo-mesh/api/discovery/v1/destination.proto";
import "github.com/solo-io/gloo-mesh/api/discovery/v1/workload.proto";
import "github.com/solo-io/gloo-mesh/api/xds/agent/v1beta1/xds_config.proto";

import "networking/v1alpha3/destination_rule.proto";
import "networking/v1alpha3/envoy_filter.proto";
import "networking/v1alpha3/gateway.proto";
import "networking/v1alpha3/service_entry.proto";
import "networking/v1alpha3/sidecar.proto";
import "networking/v1alpha3/virtual_service.proto";
import "networking/v1alpha3/workload_entry.proto";

// NetworkingExtensions provides customizable patches to Gloo Mesh-generated configuration.
// Gloo Mesh uses a NetworkingExtensions client to request optional patches from a pluggable
// NetworkingExtensions server.
// The server can return a set of patches which Gloo Mesh will apply before writing configuration to the cluster.
service NetworkingExtensions {
    // GetExtensionPatches fetches a set of patches to the output configuration from the Extensions server.
    // The current discovery snapshot and translated outputs are provided in the ExtensionPatchRequest
    rpc GetExtensionPatches (ExtensionPatchRequest) returns (ExtensionPatchResponse) {
    }

    // WatchPushNotifications initiates a streaming connection which allows the NetworkingExtensions server
    // to push notifications to Gloo Mesh telling it to resync its configuration.
    // This allows a NetworkingExtensions server to trigger Gloo Mesh to resync its state for
    // events triggered by objects not watched by Gloo Mesh.
    rpc WatchPushNotifications (WatchPushNotificationsRequest) returns (stream PushNotification) {
    }
}

// the parameters provided to the Extensions server when requesting patches
message ExtensionPatchRequest {
    // the set of discovery objects provided as inputs for the Gloo Mesh translation
    DiscoverySnapshot inputs = 1;

    // the base set of output objects translated by Gloo Mesh.
    // these may have been operated upon by a previous Extension server if multiple servers
    // have been configured.
    repeated GeneratedObject outputs = 2;
}

// the set of patches the server wishes to apply to the Gloo Mesh Networking outputs.
// Any objects provided here will be inserted into the final Gloo Mesh snapshot.
// If an object already exists in the snapshot, it will be overridden by the version provided here.
// If multiple extensions servers are configured, this response may be
// operated upon by Extension patches provided by subsequent servers.
message ExtensionPatchResponse {
    // the set of modified/added output objects desired by the Extension server.
    repeated GeneratedObject patched_outputs = 1;
}

// a Protobuf representation of the set of Discovery objects used to produce the Networking outputs.
message DiscoverySnapshot {
    // all meshes in the discovery snapshot
    repeated MeshObject meshes = 1;
    // all Destinations in the discovery snapshot
    repeated DestinationObject destinations = 2;
    // all workloads in the discovery snapshot
    repeated WorkloadObject workloads = 3;
}

// a proto-serializable representation of a Destination object
message DestinationObject {
    // metadata of the object
    ObjectMeta metadata = 1;
    // the spec of the object
    .discovery.mesh.gloo.solo.io.DestinationSpec spec = 2;
    // the status of the object
    .discovery.mesh.gloo.solo.io.DestinationStatus status = 3;
}

// a proto-serializable representation of a Workload object
message WorkloadObject {
    // metadata of the object
    ObjectMeta metadata = 1;
    // the spec of the object
    .discovery.mesh.gloo.solo.io.WorkloadSpec spec = 2;
    // the status of the object
    .discovery.mesh.gloo.solo.io.WorkloadStatus status = 3;
}

// a proto-serializable representation of a Mesh object
message MeshObject {
    // metadata of the object
    ObjectMeta metadata = 1;
    // the spec of the object
    .discovery.mesh.gloo.solo.io.MeshSpec spec = 2;
    // the status of the object
    .discovery.mesh.gloo.solo.io.MeshStatus status = 3;
}

// a generated object can be of any output type supported by Gloo Mesh.
// the content of the type field should be used to determine
// the type of the output object.
// TODO(ilackarms): consider parameterizing Gloo Mesh to allow excluding GeneratedObjects from patch requests in the case where an implementer only performs additions (no updates required).
message GeneratedObject {
    // metadata of the object
    ObjectMeta metadata = 1;
    // type of the object.
    oneof type {
        .istio.networking.v1alpha3.DestinationRule destination_rule = 2;
        .istio.networking.v1alpha3.EnvoyFilter envoy_filter = 3;
        .istio.networking.v1alpha3.ServiceEntry service_entry = 4;
        .istio.networking.v1alpha3.VirtualService virtual_service = 5;
        ConfigMap config_map = 6;
        .xds.agent.enterprise.mesh.gloo.solo.io.XdsConfigSpec xds_config = 7;
        // TODO(ilackarms): add more types here. note that we may need to support non-proto resourecs here in the future,
        // in which case we will probably use a proto Struct to represent the object.
    }

    message ConfigMap {
        map<string, string> data = 1;
    }
}

// ObjectMeta is a simplified clone of the Kubernetes ObjectMeta used to represent object metadata
// for Kubernetes objects passed as messages in the NetworkingExtensions API.
message ObjectMeta {
    // the Kubernetes name of the object
    string name = 1;

    // the Kubernetes namespace of the object
    string namespace = 2;

    // the Kubernetes clusterName of the object (used internally by Gloo Mesh)
    string cluster_name = 3;

    // the Kubernetes labels on the object
    map<string,string> labels = 4;

    // the Kubernetes annotations on the object
    map<string,string> annotations = 5;
}

// request to initiate push notifications
message WatchPushNotificationsRequest {
}

// triggers a resync of Gloo Mesh objects
message PushNotification {

}
